tests/parser-test-files/bad-files/parse-while.1.error
error: Malformed while expression
  --> test:4:16
   |
 4 |  (define f (while))
   |                  ^ expected condition
